tests/invalid_programs/use_undeclared_var.con
mod foo {
    pub fn main() -> i32 {
        let b: i32 = a;
        let a: i32 = 69;

        return b;
    }
}
